--- a/public/index.html
+++ b/public/index.html
@@ -9,4 +9,5 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="root"></div>
   </body>
+  <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </html>
